# Media-Play-Server

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain
src/: http_server.rs  main.rs  ws_server.rs
static/: index.html  player.html  player.js  watcher.html  watcher.js
static/mov/: README.md
